Fix alignment issue in card-actions

--- a/src/components/DashLanding/DashLanding.scss
+++ b/src/components/DashLanding/DashLanding.scss
@@ -236,7 +236,6 @@
   .card-actions {
     align-items: center;
     display: flex;
-    justify-content: end;
   }
 
   /* Right Sidebar */
